[package]
name = "rustefi"
version = "0.1.0"
authors = ["Alexander Bulychev <a.f.bulychev@gmail.com>"]
description = "Rust based EFI unit"
build = "build.rs"

[profile.dev]
panic = "abort"
incremental = false
lto = true
opt-level = 1
debug = true
debug-assertions = true

[profile.release]
panic = "abort"
incremental = false
lto = true
codegen-units = 1
debug = false
debug-assertions = false

[dependencies]
f021_fapi = { git = "https://github.com/paoloteti/f021-flash-api.git" }
panic_impl = { path = "crates/panic_impl" }
tms570 = {path = "crates/tms570"}
pid-loop = {path = "crates/pid-loop"}
bitflags = "1.3.2"
postcard = {version = "1.0.1"}
serde = { version = "1.0.*", default-features = false}

[dependencies.linked_list_allocator]
default-features = true
version = "0.10.3"


